metadata/sf-prod/force-app/main/default/objects/Contact/fields/Account_XO_Hire_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_XO_Hire_Score__c</fullName>
    <formula>Account.XO_Hire_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Prioritization of this contact for XO Hire outreach. It pulls the value from the associated account.</inlineHelpText>
    <label>Account XO Hire Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>