metadata/sf-prod/force-app/main/default/objects/Contact/fields/Apollo_Stage__c.field-meta.xml
<CustomField>
    <fullName>Apollo_Stage__c</fullName>
    <label>Apollo Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Contact Identified</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Meeting Booked</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>