metadata/sf-prod/force-app/main/default/objects/Contact/fields/Aurea_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Aurea_SF_ID__c</fullName>
    <description>ID of the contact in Aurea SFDC</description>
    <externalId>true</externalId>
    <label>Aurea SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>