metadata/sf-prod/force-app/main/default/objects/Contact/fields/Bad_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bad_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contact information is not correct.  Update needed.</inlineHelpText>
    <label>Bad Contact</label>
    <type>Checkbox</type>
</CustomField>