metadata/sf-prod/force-app/main/default/objects/Contact/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>LAMBDA-65776 Business unit of currently open Renewal</description>
    <inlineHelpText>Business unit derived from currently open renewal</inlineHelpText>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Unit</valueSetName>
    </valueSet>
</CustomField>