metadata/sf-prod/force-app/main/default/objects/Contact/fields/Central_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Central_Account_ID__c</fullName>
    <label>Central Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>