metadata/sf-prod/force-app/main/default/objects/Contact/fields/Central_Contact_ID_15__c.field-meta.xml
<CustomField>
    <fullName>Central_Contact_ID_15__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Central_Contact_ID_15</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>