metadata/sf-prod/force-app/main/default/objects/Contact/fields/Central_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Central_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>Central Contact ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>