metadata/sf-prod/force-app/main/default/objects/Contact/fields/CloudFix_Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>CloudFix_Onboarding_Date__c</fullName>
    <description>To track when a user completed onboarding on the CloudFix product, i.e. connected their AWS account.</description>
    <inlineHelpText>To track when a user completed onboarding on the CloudFix product, i.e. connected their AWS account.</inlineHelpText>
    <label>CloudFix Onboarding Date</label>
    <type>Date</type>
</CustomField>