metadata/sf-prod/force-app/main/default/objects/Contact/fields/CloudFix_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>CloudFix_Registration_Date__c</fullName>
    <description>To track when people register on https://app.cloudfix.com/register</description>
    <inlineHelpText>To track when people register on https://app.cloudfix.com/register</inlineHelpText>
    <label>CloudFix Registration Date</label>
    <type>Date</type>
</CustomField>