metadata/sf-prod/force-app/main/default/objects/Contact/fields/Contact_Us_Question__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Question__c</fullName>
    <description>Question/Comment from Contact if Contact Us form is filled out on the website - populated by Hubspot</description>
    <inlineHelpText>Question/Comment from Contact if Contact Us form is filled out on the website - populated by Hubspot</inlineHelpText>
    <label>Contact Us Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>