metadata/sf-prod/force-app/main/default/objects/Contact/fields/Current_ARR__c.field-meta.xml
<CustomField>
    <fullName>Current_ARR__c</fullName>
    <description>LAMBDA-65776 Field to capture the ARR amount from related active renewal</description>
    <inlineHelpText>This field is synced from latest ongoing renewal opportunity and brings ARR value</inlineHelpText>
    <label>Current ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>