metadata/sf-prod/force-app/main/default/objects/Contact/fields/Current_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_List_Price__c</fullName>
    <description>LAMBDA-65776 List price of the auto renewal quote</description>
    <inlineHelpText>List price of quote derived from current open renewal</inlineHelpText>
    <label>Current List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>