metadata/sf-prod/force-app/main/default/objects/Contact/fields/Current_Notice_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Current_Notice_Deadline__c</fullName>
    <description>LAMBDA-65775 current notice deadline of the active open renewal</description>
    <inlineHelpText>Notice deadline field derived from current open renewal</inlineHelpText>
    <label>Current Notice Deadline</label>
    <type>Date</type>
</CustomField>