metadata/sf-prod/force-app/main/default/objects/Contact/fields/Current_NS_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_NS_Id__c</fullName>
    <description>Netsuite Id of the current active renewal</description>
    <inlineHelpText>Netsuite Id synced from latest active renewal related to this contact</inlineHelpText>
    <label>Current NS Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>