metadata/sf-prod/force-app/main/default/objects/Contact/fields/Current_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Opportunity_Stage__c</fullName>
    <description>Used to update the stage of the latest Opportunity associated with this Contact from Outreach.</description>
    <label>Current Opportunity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Stages</valueSetName>
    </valueSet>
</CustomField>