metadata/sf-prod/force-app/main/default/objects/Contact/fields/Current_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Current_Product_Family__c</fullName>
    <description>Last active Product Family being sold</description>
    <label>Current Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Families</valueSetName>
    </valueSet>
</CustomField>