metadata/sf-prod/force-app/main/default/objects/Contact/fields/Current_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Renewal_Date__c</fullName>
    <label>Current Renewal Date</label>
    <type>Date</type>
</CustomField>