metadata/sf-prod/force-app/main/default/objects/Contact/fields/Current_Success_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Success_Level__c</fullName>
    <description>LAMBDA-65776 success level of the current active renewal for which this contact is primary contact</description>
    <inlineHelpText>Derived from Current active renewal related to this contact as Primary.</inlineHelpText>
    <label>Current Success Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>