metadata/sf-prod/force-app/main/default/objects/Contact/fields/Current_Term__c.field-meta.xml
<CustomField>
    <fullName>Current_Term__c</fullName>
    <description>LAMBDA-65776 field to capture Term from Opportunity</description>
    <inlineHelpText>The field shows the term synced from latest active renewal related to this opportunity</inlineHelpText>
    <label>Current Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>