metadata/sf-prod/force-app/main/default/objects/Contact/fields/Email_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Email_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Email is Invalid - populated from Hubspot</description>
    <inlineHelpText>Checked if Email is Invalid - populated from Hubspot</inlineHelpText>
    <label>Email Invalid</label>
    <type>Checkbox</type>
</CustomField>