metadata/sf-prod/force-app/main/default/objects/Contact/fields/Email_Invalid_Cause__c.field-meta.xml
<CustomField>
    <fullName>Email_Invalid_Cause__c</fullName>
    <description>Reason for Email invalid - populated by Hubspot</description>
    <inlineHelpText>Reason for Email invalid - populated by Hubspot</inlineHelpText>
    <label>Email Invalid Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Invalid_Cause</valueSetName>
    </valueSet>
</CustomField>