metadata/sf-prod/force-app/main/default/objects/Contact/fields/HubSpot_ID__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_ID__c</fullName>
    <description>Field migrated from Ignite SFDC.</description>
    <label>HubSpot ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>