metadata/sf-prod/force-app/main/default/objects/Contact/fields/Influitive_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Influitive_SF_ID__c</fullName>
    <description>ID of the contact in Influitive SFDC. Used for migration and will be deleted later.</description>
    <externalId>true</externalId>
    <label>Influitive SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>