metadata/sf-prod/force-app/main/default/objects/Contact/fields/IntAcct_ID__c.field-meta.xml
<CustomField>
    <fullName>IntAcct_ID__c</fullName>
    <label>IntAcct ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>