metadata/sf-prod/force-app/main/default/objects/Contact/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Level</valueSetName>
    </valueSet>
</CustomField>