metadata/sf-prod/force-app/main/default/objects/Contact/fields/Legacy_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Reference_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>