metadata/sf-prod/force-app/main/default/objects/Contact/fields/Linked_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Linked_To_Account__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Linked To Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>