metadata/sf-prod/force-app/main/default/objects/Contact/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>