metadata/sf-prod/force-app/main/default/objects/Contact/fields/Outreach_Current_Sequence_Step_No__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Step_No__c</fullName>
    <description>Mapped from Outreach to Salesforce. This field will tell us in which sequence step the contact is.</description>
    <label>Outreach Current Sequence Step No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>