metadata/sf-prod/force-app/main/default/objects/Contact/fields/Previous_Success_Level__c.field-meta.xml
<CustomField>
    <fullName>Previous_Success_Level__c</fullName>
    <description>LAMBDA-65776 Success level of current active subscription</description>
    <inlineHelpText>Previous Success level derived from the latest open renewal</inlineHelpText>
    <label>Previous Success Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>