metadata/sf-prod/force-app/main/default/objects/Contact/fields/Previous_Term__c.field-meta.xml
<CustomField>
    <fullName>Previous_Term__c</fullName>
    <description>LAMBDA-65776 previous term from the related active renewal</description>
    <inlineHelpText>Previous term derived from currently open opportunity related to this contact</inlineHelpText>
    <label>Previous Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>