metadata/sf-prod/force-app/main/default/objects/Contact/fields/Renewal_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notice_Date__c</fullName>
    <description>LAMBDA-65776 notice date based on the renewal date of the open renewal</description>
    <inlineHelpText>Notice date derived from related open renewal</inlineHelpText>
    <label>Renewal Notice Date</label>
    <type>Date</type>
</CustomField>