metadata/sf-prod/force-app/main/default/objects/Contact/fields/Self_Serve_URL__c.field-meta.xml
<CustomField>
    <fullName>Self_Serve_URL__c</fullName>
    <description>LAMBDA-65776 Formula field to dynamically generate Self-Service login URL</description>
    <formula>HYPERLINK(&apos;https://www.tsi.trilogy.com/manage-subscriptions?subscriptionId=&apos;&amp; Current_NS_Id__c, &apos;Self Service Portal&apos;)</formula>
    <inlineHelpText>This field shows the Self service portal login URL personalized to this Contact</inlineHelpText>
    <label>Self Serve URL</label>
    <type>Text</type>
</CustomField>