metadata/sf-prod/force-app/main/default/objects/Contact/fields/Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_End_Date__c</fullName>
    <description>LAMBDA-65776 term end date derived from related open renewal</description>
    <inlineHelpText>End date of the latest open renewal opportunity related to this contact</inlineHelpText>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>