metadata/sf-prod/force-app/main/default/objects/Contact/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>LAMBDA-63218 field to map Timezone from Lead to Contact for XO Hire Leads</description>
    <inlineHelpText>Timezone of the XO hire lead capture from Lead</inlineHelpText>
    <label>Timezone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>