metadata/sf-prod/force-app/main/default/objects/Contact/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <formula>TEXT( Account.Central_Vertical__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>