metadata/sf-prod/force-app/main/default/objects/Contact/fields/Vertical_Temp__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Temp__c</fullName>
    <label>Vertical Temp</label>
    <length>80</length>
    <type>Text</type>
</CustomField>