metadata/sf-prod/force-app/main/default/objects/Contact/fields/Where_did_they_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>Where_did_they_hear_about_us__c</fullName>
    <description>Important for hybrid attribution (i.e. UTMs vs what the users provides)</description>
    <inlineHelpText>Important for hybrid attribution (i.e. UTMs vs what the users provides)</inlineHelpText>
    <label>Where did they hear about us</label>
    <length>200</length>
    <type>Text</type>
</CustomField>