metadata/sf-prod/force-app/main/default/objects/Contact/fields/XO_Hire_Status__c.field-meta.xml
<CustomField>
    <fullName>XO_Hire_Status__c</fullName>
    <description>Used to track XO Hire campaign - reaching out to existing customers.</description>
    <label>XO Hire Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Lead</fullName>
            </value>
            <value>
                <fullName>Cold Outreach</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>MQL Outreach</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>New Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>