metadata/sf-prod/force-app/main/default/objects/Contact/fields/XO_Hire_Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>XO_Hire_Trial_Start_Date__c</fullName>
    <description>Used for the XO Hire campaign - reaching out to existing customers</description>
    <label>XO Hire Trial Start Date</label>
    <type>Date</type>
</CustomField>