metadata/sf-prod/force-app/main/default/objects/Contact/validationRules/ValidateContactPhoneNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateContactPhoneNumber</fullName>
    <active>true</active>
    <description>LAMBDA-52572 Validate Contact to make sure it is accordance with Netsuite expected format to avoid break in integrations</description>
    <errorConditionFormula>AND(NOT(ISBLANK( Phone )), !REGEX(Phone, &quot;(([0-9 \\.\\(\\)\\-\\+]){7,})([Ee]xt ([0-9 \\.\\(\\)\\-\\+]){1,})?&quot;),OR(IsChanged(Phone),ISNEW()) ) &amp;&amp; NOT($Setup.Quality_Bars_Configuration__c.Disabled_Opportunity_QBs__c)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone number should be 7 digits or more, or in the format of 1234567 Ext 123 if it has extension</errorMessage>
</ValidationRule>