metadata/sf-prod/force-app/main/default/objects/Contact/listViews/AtHand.listView-meta.xml
<ListView>
    <fullName>AtHand</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vertical_Temp__c</field>
        <operation>equals</operation>
        <value>Hand</value>
    </filters>
    <filters>
        <field>Account.Product_Families__c</field>
        <operation>includes</operation>
        <value>AtHand</value>
    </filters>
    <label>AtHand</label>
</ListView>