metadata/sf-prod/force-app/main/default/objects/Contact/listViews/DNN_Contacts.listView-meta.xml
<ListView>
    <fullName>DNN_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>NetSuite_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vertical_Temp__c</field>
        <operation>equals</operation>
        <value>DNN</value>
    </filters>
    <label>DNN Contacts</label>
</ListView>