metadata/sf-prod/force-app/main/default/objects/Contact/listViews/EPM_Live.listView-meta.xml
<ListView>
    <fullName>EPM_Live</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Product_Families__c</field>
        <operation>includes</operation>
        <value>EPM Live</value>
    </filters>
    <label>EPM Live</label>
</ListView>