metadata/sf-prod/force-app/main/default/objects/Contact/listViews/Ignite_Misc.listView-meta.xml
<ListView>
    <fullName>Ignite_Misc</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Product_Families__c</field>
        <operation>includes</operation>
        <value>Ignite Misc</value>
    </filters>
    <label>Ignite Misc</label>
</ListView>