metadata/sf-prod/force-app/main/default/objects/Contact/listViews/Lyris_AEM_list_and_Campaign.listView-meta.xml
<ListView>
    <fullName>Lyris_AEM_list_and_Campaign</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Product_Families__c</field>
        <operation>includes</operation>
        <value>Lyris (AEM)</value>
    </filters>
    <label>Lyris (AEM) (list and Campaign)</label>
</ListView>