metadata/sf-prod/force-app/main/default/objects/Contact/listViews/Pivotal_Contacts.listView-meta.xml
<ListView>
    <fullName>Pivotal_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vertical_Temp__c</field>
        <operation>equals</operation>
        <value>Pivotal</value>
    </filters>
    <label>Pivotal Contacts</label>
</ListView>